<resources>
    <string name="app_name">Instagram</string>
    <string name="log_face">Log in with Facebook</string>
    <string name="text_account">Don\'t have an account? Sign Up.</string>
    <string name="text_or">OR</string>
    <string name="text_help">Forgot your Login detail? Get help signing In.</string>
    <string name="text_login">LOG IN</string>
    <string name="text_pass">Password</string>
    <string name="text_user">Username</string>
</resources>
